Bug 1931502 - [devtools] Adapt Split Console border in High Contrast Mode. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D229116

--- a/devtools/client/themes/splitters.css
+++ b/devtools/client/themes/splitters.css
@@ -53,6 +53,11 @@ splitter.devtools-horizontal-splitter,
   box-sizing: border-box;
 
   z-index: var(--browser-stack-z-index-devtools-splitter, 1);
+
+  /* opt-out of forced colors because the transparent borders are turned into
+     opaque ones in High Contrast Mode. --devtools-splitter-color has specific value
+     in High Contrast Mode so we should be fine */
+     forced-color-adjust: none;
 }
 
 splitter.devtools-horizontal-splitter {
